# aimagistrgeistva

./: .env.example  .gitignore  .pre-commit-config.yaml  RAILWAY_DEPLOY.md  README.md  main.py  pyproject.toml  pytest.ini  railway.json  stress_test.py
.github/workflows/: ci.yml
app/: __init__.py
app/adapters/: __init__.py  db.py  files.py  http_client.py  rate_limit.py  redis_client.py
app/api/: __init__.py
app/api/cli/: app.py
app/api/http/: app.py  app.py.backup  simple_app.py
app/api/telegram/: __init__.py  webhook.py
app/core/: __init__.py  config.py  di.py  errors.py  logging.py  metrics.py
app/core/utils/: helpers.py
app/domain/: commands.py  events.py  models.py  policies.py
app/services/: __init__.py  nlp_nlu.py  orchestrator.py
app/services/automation/: __init__.py
app/services/automations/: __init__.py  document_service.py  finance_service.py  task_service.py
app/services/integrations/: __init__.py  telegram.py
app/services/llm/: __init__.py  yandex_gpt.py
app/services/llm/prompts/: system_ai_maga.md
app/services/rag/: __init__.py
app/services/translation/: __init__.py
app/services/vision/: __init__.py
app/services/voice/: __init__.py  audio_io.py  hotword.py  stt.py  tts.py  vad.py
app/tests/: __init__.py
app/tests/contracts/: test_yandex_speechkit.py
app/tests/unit/: test_config.py  test_domain_models.py  test_nlu.py  test_orchestrator.py
docker/: Dockerfile  docker-compose.railway.yml  docker-compose.yml  init.sql
infra/migrations/: iteration_2_models.py
scripts/load/: nlu_telegram_load_test.py
